# Backtesting-Emulator

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md
benches/: engine_throughput.rs
configs/: default.toml
data/sample/: spy_daily.csv
examples/: profile_target.rs
scripts/: generate_sample_data.py
src/: config.rs  engine.rs  events.rs  lib.rs
src/data/: csv_feed.rs  csv_feed_tests.rs  fast_hash.rs  mod.rs  types.rs
src/engine/: tests.rs
src/execution/: mod.rs  models.rs  models_tests.rs  simulated.rs  simulated_tests.rs
src/metrics/: drawdown.rs  drawdown_tests.rs  mod.rs  report.rs  report_tests.rs  returns.rs  returns_tests.rs  trades.rs  trades_tests.rs
src/portfolio/: mod.rs  sizing.rs  tests.rs
src/strategy/: context.rs  context_tests.rs  ma_crossover.rs  ma_crossover_tests.rs  mean_reversion.rs  mean_reversion_tests.rs  mod.rs  momentum.rs  momentum_tests.rs  stats.rs  test_support.rs
tests/: determinism.rs
