[package]
name = "chronos-bt"
version = "0.1.0"
edition = "2021"
description = "An event-driven backtesting engine with structural lookahead-bias prevention"

[lib]
name = "chronos_bt"
path = "src/lib.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
